# header

./: .gitignore  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  gemini-extension.json  release-please-config.json
cli/: Cargo.toml
cli/src/: error.rs  lib.rs  main.rs
commands/header/: explore.toml  implement.toml  newTrack.toml  revert.toml  review.toml  setup.toml  status.toml
policies/: conductor.toml
scripts/: replace_conductor_to_header.ps1
src/header-mcp/: Cargo.rs  Cargo.toml
src/header-mcp/src/: handler.rs  main.rs  state.rs
src/header-mcp/src/tools/: conductor.rs  fs.rs  git.rs  mod.rs  project.rs
templates/: workflow.md
templates/code_styleguides/: gcp-best-pactice.md  rust.md
