[package]
name = "conductor-unified"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "conductor"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web frameworks
rocket = { version = "0.5", features = ["json"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# File watching
notify = "6.1"
walkdir = "2"

# Concurrency
dashmap = "5.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP
rmcp = { version = "0.1", features = ["server", "transport-io"] }
schemars = "0.8"

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
